apps/opentelemetry/templates/grpc_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-nginx
  namespace: xquare-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-nginx
  template:
    metadata:
      labels:
        app: grpc-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.6
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: grpc-nginx-config
