apps/opentelemetry/templates/grpc_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: otel-trace-reciever-be-prod
    argocd.argoproj.io/instance: otel-trace-reciever-be-prod
    environment: prod
    project: otel-trace-reciever
    type: be
  name: otel-trace-reciever-be-prod
  namespace: xquare-prod
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: otel-trace-reciever-be-prod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 5m
        sidecar.istio.io/proxyMemory: 128Mi
        sidecar.istio.io/rewriteAppHTTPProbers: 'false'
      labels:
        app: otel-trace-reciever-be-prod
        project: otel-trace-reciever
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - otel-trace-reciever-be-prod
              topologyKey: kubernetes.io/hostname
      containers:
        - image: >-
            786584124104.dkr.ecr.ap-northeast-2.amazonaws.com/otel-trace-reciever-be-prod:prod-6a7a1a0fc4ac6a1b836a0e536da1be5bb6c54832
          env:
            - name: MONGO_URI
              valueFrom:
                secretKeyRef:
                  name: mongodb-secret
                  key: mongo-uri
          imagePullPolicy: Always
          name: otel-trace-reciever-be-prod
          ports:
            - containerPort: 4317
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 3
            tcpSocket:
              port: 4317
            timeoutSeconds: 1
          resources:
            limits:
              memory: 2000Mi
            requests:
              cpu: 20m
              ephemeral-storage: 20Mi
              memory: 700Mi
      dnsPolicy: ClusterFirst
      nodeSelector:
        Karpenter: enabled
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 120
      tolerations:
        - effect: NoSchedule
          key: xquare/server
          operator: Equal
          value: 'true'
