apps/opentelemetry/templates/grpc_nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-nginx-service
  namespace: xquare-prod
spec:
  selector:
    app: grpc-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
